--- a/styles.css
+++ b/styles.css
@@ -2,30 +2,62 @@
     --grid-num: 16;
 }
 
-#user-input {
+html {
+    background-color: #ededed;
+    min-height: 100%;
+}
+
+header {
+    text-align: center;
+}
+
+main {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 100px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+#title {
+    line-height: 1.3;
+    font-size: 80px;
+}
+
+#side-pane {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
+    gap: 30px;
+    width: 200px;
 }
 
 #container {
     display: grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns: repeat(var(--grid-num), 8px);
-    grid-template-rows: repeat(var(--grid-num), 8px);
+    width: 600px;
+    height: 600px;
+    grid-template-columns: repeat(var(--grid-num), 1fr);
+    grid-template-rows: repeat(var(--grid-num), 1fr);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     /*grid-template-rows: repeat(auto-fill, minmax(200px, 1fr)); */
 }
 
 .cell {
-    background-color: black;
+    background-color: white;
 }
 
-.cell::before {
-    content: "";
-    padding-bottom: 100%;
-    display:block;
-}
-
-.hovered-cell {
-    background-color: aqua;
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
 }
