feat: - add refreshBoard function - centered color picker button and size text

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ main {
     font-size: 80px;
 }
 
+/*SIDE PANE*/
 #side-pane {
     display: flex;
     flex-direction: column;
@@ -41,6 +42,14 @@ main {
     justify-content: left;
     gap: 30px;
     width: 200px;
+}
+
+#colorPicker {
+    width: 100%;
+}
+
+#size {
+    text-align: center;
 }
 
 #container {
