--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ main {
     font-size: 80px;
 }
 
-/*SIDE PANE*/
+/* SIDE PANE */
 #side-pane {
     display: flex;
     flex-direction: column;
@@ -53,6 +53,7 @@ main {
     text-align: center;
 }
 
+/* DRAWING BOARD */
 #container {
     display: grid;
     width: 500px;
